--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: hajyoussef.amine@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Amine Hajyoussef blog  
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "pindexis.github.io" # the base hostname & protocol for your site
 twitter_username: aminehajyoussef
 github_username: pindexis 
 
